# juce2048

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  getThirdParty.sh
Source/: Game.hpp  GameComponent.cpp  GameComponent.h  Main.cpp
